Simplify and refactor code